# jabcode

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: reader.rs  writer.rs
src/: lib.rs  reader.rs  util.rs  writer.rs
src/jabcode/: Makefile  detector.c  detector.h  sample.c  sample.h
src/jabcodeReader/: Makefile
src/jabcodeWriter/: Makefile  jabwriter.c
