[package]
name = "jabcode"
version = "0.1.0"
edition = "2021"

[dependencies]

# Library configuration
[lib]
path = "src/lib.rs"
name = "jabcode"  # Naming the library for clarity
crate-type = ["cdylib", "rlib"]  # Specify multiple types if needed


# Binary configuration
[[bin]]
name = "jabReader"
path = "src/reader.rs"

[[bin]]
name = "jabWriter"
path = "src/writer.rs"
